--- a/pom.xml
+++ b/pom.xml
@@ -64,9 +64,9 @@
             <version>5.2.3</version>
         </dependency>
         <dependency>
-            <groupId>io.github.millij</groupId>
-            <artifactId>poi-object-mapper</artifactId>
-            <version>1.0.0</version>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
+            <version>2.15.3</version>
         </dependency>
     </dependencies>
 
