--- a/pom.xml
+++ b/pom.xml
@@ -78,6 +78,16 @@
             <artifactId>log4j-core</artifactId>
             <version>2.21.1</version>
         </dependency>
+        <dependency>
+            <groupId>com.google.collections</groupId>
+            <artifactId>google-collections</artifactId>
+            <version>1.0</version>
+        </dependency>
+        <dependency>
+            <groupId>com.google.guava</groupId>
+            <artifactId>guava</artifactId>
+            <version>32.1.3-jre</version>
+        </dependency>
     </dependencies>
 
     <build>
