--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
-projectFileName=Project
-technicalDescriptionFileName=Technical description
+projectFileName=p
+technicalDescriptionFileName=td
 spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
 spring.datasource.username=postgres
 spring.datasource.password=admin
