--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 project.file.name=p
 technical.conditions.file.name=tc
-spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
+spring.datasource.url=jdbc:postgresql://localhost:5432/postgres?currentSchema=new
 spring.datasource.username=postgres
 spring.datasource.password=admin
 spring.jpa.show-sql=true
